# xflow-client

./: .gitignore  README.md  main.py  pyproject.toml
src/xflow_client/: __init__.py  client.py
tests/: document_client_test.py  fixtures.py  process_client_test.py  process_template_client_test.py  rights_group_client_test.py  user_client_test.py  value_list_client_test.py
xflow_client/: __init__.py  client.py  document_client.py  process_client.py  process_template_client.py  rights_group_client.py  user_client.py  value_list_client.py
